--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,9 +67,11 @@ jobs:
         with:
           ruby-version: 2.7.8
           bundler-cache: true
-
-      - name: Rubocop
-        run: bundle exec rubocop
+      - uses: reviewdog/action-setup@v1
+      - name: Run rubocop with reviewdog
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: bundle exec rubocop --parallel | reviewdog -reporter=github-pr-review -f=rubocop -filter-mode=nofilter -fail-on-error
 
   brakeman:
     runs-on: ubuntu-latest
