--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.1
+          ruby-version: 2.7.8
           bundler-cache: true
 
       - name: Run Elasticsearch
@@ -54,8 +54,7 @@ jobs:
           REDIS_URL: redis://127.0.0.1:6379
           TEST_ELASTICSEARCH_URL: http://127.0.0.1:9200
         run: |
-          bin/rails db:create 
-          bin/rails db:migrate
+          bin/rails ridgepole:apply:update
           bin/rspec
 
   rubocop:
@@ -65,13 +64,11 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.1
+          ruby-version: 2.7.8
           bundler-cache: true
-      - uses: reviewdog/action-setup@v1
-      - name: Run rubocop with reviewdog
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: bundle exec rubocop | reviewdog -reporter=github-pr-review -f=rubocop -filter-mode=nofilter -fail-on-error
+
+      - name: Rubocop
+        run: bundle exec rubocop
 
   brakeman:
     runs-on: ubuntu-latest
@@ -80,7 +77,7 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.1
+          ruby-version: 2.7.8
           bundler-cache: true
 
       - name: brakeman
