--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,10 +66,11 @@ jobs:
         with:
           ruby-version: 3.1.1
           bundler-cache: true
-
-      - name: Rubocop
-        run: bundle exec rubocop
-
+      - uses: reviewdog/action-setup@v1
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run rubocop with reviewdog
+        run: bundle exec rubocop | reviewdog -reporter=github-pr-review -f=rubocop -filter-mode=nofilter -fail-on-error
   brakeman:
     runs-on: ubuntu-latest
     steps:
