--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,10 @@ name: CI
 on:
   pull_request:
 
+permissions:
+  contents: read
+  pull-requests: write
+  
 jobs:
   rspec:
     runs-on: ubuntu-latest
