--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
 permissions:
   contents: read
   pull-requests: write
-  
+
 jobs:
   rspec:
     runs-on: ubuntu-latest
@@ -75,7 +75,7 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo ${{ secrets.GITHUB_TOKEN }}
+          echo 'tesyts'
           bundle exec rubocop | reviewdog -reporter=github-pr-review -f=rubocop -filter-mode=nofilter -fail-on-error
   brakeman:
     runs-on: ubuntu-latest
