--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -3,7 +3,7 @@ name: Create Release PR
 on:
   push:
     branches:
-      - master
+      - develop
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
