--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -2,12 +2,13 @@ name: Create Release PR
 
 on:
   push:
-    branches:
-      - develop
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
+
+env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   create-release-pr:
@@ -15,14 +16,6 @@ jobs:
     timeout-minutes: 3
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 3.1.1
-
     - name: Create a release pull request
       env:
         TZ: Asia/Tokyo
@@ -32,6 +25,4 @@ jobs:
         GIT_PR_RELEASE_TEMPLATE: .github/.git-pr-template
         GIT_PR_RELEASE_LABELS: "Waiting for Approve"
       run: |
-        gem install git-pr-release -v "0.6.0"
-        git remote set-url origin "https://${GITHUB_ACTOR}:${GIT_PR_RELEASE_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
-        git-pr-release || echo "Done."
+        gh pr create --title "Pull request title" --body "Pull request body"
