--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -16,6 +16,7 @@ jobs:
     timeout-minutes: 3
 
     steps:
+    - uses: actions/checkout@v2
     - name: Create a release pull request
       env:
         TZ: Asia/Tokyo
