--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -8,7 +8,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   create-release-pr:
