--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -2,8 +2,6 @@ name: Create Release PR
 
 on:
   push:
-    branches:
-      - develop
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -15,23 +13,14 @@ jobs:
     timeout-minutes: 3
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 3.1.1
-
+    - uses: actions/checkout@v2
     - name: Create a release pull request
       env:
         TZ: Asia/Tokyo
-        GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GIT_PR_RELEASE_TOKEN: ${{ secrets.TEST_TOKEN }}
         GIT_PR_RELEASE_BRANCH_PRODUCTION: master
         GIT_PR_RELEASE_BRANCH_STAGING:  develop
         GIT_PR_RELEASE_TEMPLATE: .github/.git-pr-template
         GIT_PR_RELEASE_LABELS: "Waiting for Approve"
       run: |
-        gem install git-pr-release -v "0.6.0"
-        git remote set-url origin "https://${GITHUB_ACTOR}:${GIT_PR_RELEASE_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
-        git-pr-release || echo "Done."
+       gh pr create --title "The bug is fixed" --body "Everything works again"
