--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -7,6 +7,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   create-release-pr:
     runs-on: ubuntu-latest
@@ -17,7 +20,7 @@ jobs:
     - name: Create a release pull request
       env:
         TZ: Asia/Tokyo
-        GIT_PR_RELEASE_TOKEN: ${{ secrets.TEST_TOKEN }}
+        GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GIT_PR_RELEASE_BRANCH_PRODUCTION: master
         GIT_PR_RELEASE_BRANCH_STAGING:  develop
         GIT_PR_RELEASE_TEMPLATE: .github/.git-pr-template
