--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -2,13 +2,12 @@ name: Create Release PR
 
 on:
   push:
+    branches:
+      - develop
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-
-env:
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   create-release-pr:
@@ -16,7 +15,14 @@ jobs:
     timeout-minutes: 3
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 3.1.1
+
     - name: Create a release pull request
       env:
         TZ: Asia/Tokyo
@@ -26,4 +32,6 @@ jobs:
         GIT_PR_RELEASE_TEMPLATE: .github/.git-pr-template
         GIT_PR_RELEASE_LABELS: "Waiting for Approve"
       run: |
-       gh pr create --title "The bug is fixed" --body "Everything works again"
+        gem install --no-document git-pr-release -v "2.1.2"
+        git remote set-url origin "https://${GITHUB_ACTOR}:${GIT_PR_RELEASE_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+        git-pr-release --no-fetch || echo "Done."
