--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - develop
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -26,7 +30,7 @@ jobs:
     - name: Create a release pull request
       env:
         TZ: Asia/Tokyo
-        GIT_PR_RELEASE_TOKEN: ${{ secrets.TEST_TOKEN }}
+        GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GIT_PR_RELEASE_BRANCH_PRODUCTION: master
         GIT_PR_RELEASE_BRANCH_STAGING:  develop
         GIT_PR_RELEASE_TEMPLATE: .github/.git-pr-template
