--- a/.github/workflows/release_pr.yml
+++ b/.github/workflows/release_pr.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - develop
 permissions:
-  issues: write
+  pull-requests: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
