--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
       - mysql-data:/var/lib/mysql
     ports:
       - 3306:3306
-    platform: linux/x86_64/v8
   rails:
     build:
       context: .
@@ -19,6 +18,7 @@ services:
       - .:/myapp
       - public-data:/myapp/public
       - tmp-data:/myapp/tmp
+    command: /bin/bash -c "rm -f tmp/pids/server.pid && bundle exec puma -C config/puma.rb"
     environment:
       TZ: Asia/Tokyo
       RAILS_ENV: development
