--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -27,5 +27,7 @@ jobs:
         with:
           ruby-version: 3.1.1
           bundler-cache: true
+      - name: bundle install
+        run: bundle install
       - name: Danger
         run: bundle exec danger --verbose
