--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,11 +1,9 @@
 name: Deploy work flow for Amazon ECS
 
 on:
-  pull_request:
+  push:
     branches:
-      - develop
-    types: [closed]
-
+      - master
 env:
   AWS_REGION: ap-northeast-1
   ECS_WEBAPP_SERVICE: service-main
