--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,56 +9,55 @@ env:
   ECS_WEBAPP_SERVICE: service-main
   WEBAPP_CONTAINER_NAME: rails 
   WEBAPP_TAG: latest
-  GOOGLE_MAP_API: ${{ secrets.GOOGLE_MAP_API }}
 
 jobs:
-  rspec:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    services:
-      mysql:
-        image: mysql:8.0.31
-        ports:
-          - 3306:3306
-        env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-        options: --health-cmd "mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 10
+  # rspec:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 10
+  #   services:
+  #     mysql:
+  #       image: mysql:8.0.31
+  #       ports:
+  #         - 3306:3306
+  #       env:
+  #         MYSQL_ALLOW_EMPTY_PASSWORD: yes
+  #       options: --health-cmd "mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 10
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.18.1'  
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+  #     - name: Use Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '16.18.1'  
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7.6
+  #     - name: Set up Ruby
+  #       uses: ruby/setup-ruby@v1
+  #       with:
+  #         ruby-version: 2.7.6
 
-      - name: Bundler and gem install
-        run: |
-          gem install bundler
-          bundle install
+  #     - name: Bundler and gem install
+  #       run: |
+  #         gem install bundler
+  #         bundle install
         
-      - name: Yarn install
-        run: yarn install --check-files
+  #     - name: Yarn install
+  #       run: yarn install --check-files
 
-      - run: rails tailwindcss:build
+  #     - run: rails tailwindcss:build
 
-      - name: Database create and migrate
-        run: |
-          cp config/database.yml.ci config/database.yml
-          bundle exec rails db:create RAILS_ENV=test
-          bundle exec rails db:migrate RAILS_ENV=test
+  #     - name: Database create and migrate
+  #       run: |
+  #         cp config/database.yml.ci config/database.yml
+  #         bundle exec rails db:create RAILS_ENV=test
+  #         bundle exec rails db:migrate RAILS_ENV=test
 
-      - name: Run rspec
-        run: bundle exec rspec
+  #     - name: Run rspec
+  #       run: bundle exec rspec
 
   deploy:
     name: deploy
-    needs: rspec
+    # needs: rspec
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
