--- a/.github/workflows/release_notify.yml
+++ b/.github/workflows/release_notify.yml
@@ -18,13 +18,19 @@ jobs:
     - name: Notify authors of merged PRs
       run: |
         PR_NUMBERS=$(git log --merges --pretty=format:"%s" | grep -o "#[0-9]*" | tr -d '#')
+        echo "PR_NUMBERS: $PR_NUMBERS"
+        echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
         for PR_NUMBER in $PR_NUMBERS; do
           AUTHOR_LOGIN=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER" | \
             jq -r .user.login)
+
+          echo "AUTHOR_LOGIN: $AUTHOR_LOGIN"
+          echo "PR_NUMBER: $PR_NUMBER"
           curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -X POST -d "{\"body\":\"@${AUTHOR_LOGIN} このPRはデプロイされました。\"}" \
             "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments"
         done
+
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
