--- a/.github/workflows/release_notify.yml
+++ b/.github/workflows/release_notify.yml
@@ -15,18 +15,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Extract commit messages from PR
+    - name: commit messages from PR
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        COMMIT_MESSAGES=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        COMMIT_MESSAGES=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
             "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/${{ github.event.pull_request.number }}/commits" | \
             jq -r '.[].commit.message')
 
-        # Echo each commit message (optional, just for clarity)
-        echo "$COMMIT_MESSAGES" | while read line; do
-          echo "$line"
-        done
-
-        # If you want to extract PR numbers from these commit messages
         PR_NUMBERS=$(echo "$COMMIT_MESSAGES" | grep -o "#[0-9]*" | tr -d '#')
 
         for PR_NUMBER in $PR_NUMBERS; do
@@ -34,11 +30,8 @@ jobs:
             "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER" | \
             jq -r .user.login)
 
-          echo "AUTHOR_LOGIN: $AUTHOR_LOGIN"
-          echo "PR_NUMBER: $PR_NUMBER"
           curl -s -H "Authorization: token $GITHUB_TOKEN" \
             -X POST -d "{\"body\":\"@${AUTHOR_LOGIN} このPRはデプロイされました。\"}" \
             "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments"
         done
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
