--- a/.github/workflows/release_notify_test.yml
+++ b/.github/workflows/release_notify_test.yml
@@ -14,19 +14,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Notify authors of merged PRs
-      run: |
-        PR_NUMBERS=$(git log --merges --pretty=format:"%s" | grep -o "#[0-9]*" | tr -d '#')
-        echo "PR_NUMBERS=$PR_NUMBERS" >> $GITHUB_ENV
-        for PR_NUMBER in $PR_NUMBERS; do
-          echo "PR_NUMBER: $PR_NUMBER"
-          AUTHOR_LOGIN=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER" | \
-            jq -r .user.login)
-          echo "AUTHOR_LOGIN: $AUTHOR_LOGIN"
-          curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -X POST -d "{\"body\":\"@${AUTHOR_LOGIN} このPRはデプロイされました。\"}" \
-            "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments"
-        done
+    - name: Notify authors using gh command
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        PR_NUM=${{ github.event.pull_request.number }}
+        
+        # コミットメッセージを取得
+        COMMIT_MESSAGES=$(gh api repos/$GITHUB_REPOSITORY/pulls/$PR_NUM/commits --jq '.[].commit.message')
+
+        PR_NUMBERS=$(echo "$COMMIT_MESSAGES" | grep -o "#[0-9]*" | tr -d '#')
+
+        for PR_NUMBER in $PR_NUMBERS; do
+          # PRの作者のログイン名を取得
+          AUTHOR_LOGIN=$(gh api repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER --jq '.user.login')
+          
+          # コメントを追加
+          echo "{\"body\":\"@${AUTHOR_LOGIN} このPRはデプロイされました。\"}" | gh api repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments -X POST -F -
+        done
