--- a/.github/workflows/release_notify.yml
+++ b/.github/workflows/release_notify.yml
@@ -1,20 +1,23 @@
 name: release_notify
 
 on:
-  pull_request:
-    types: [closed]
-    branches: [master]
+  push:
+    branches: 
+      - master
 
-permissions: write-all
+permissions:
+  contents: read
+  deployments: write
 
 jobs:
+  base:
+    uses: ./.github/workflows/release_notify_base.yml
   notify-authors:
-    if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
+    needs: [base]
+    timeout-minutes: 1
     steps:
-    - name: commit messages from PR
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Notify authors
       run: |
         # リリースPRに含まれるコミットメッセージを取得
         COMMIT_MESSAGES=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
@@ -30,12 +33,10 @@ jobs:
             "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER" | \
             jq -r .user.login)
 
-          if [ "$AUTHOR_LOGIN" = "mpg-hiroshi-tokudomi" ]; then
-            continue
-          fi
-
           curl -s -H "Authorization: token $GITHUB_TOKEN" \
             -X POST -d "{\"body\":\"@${AUTHOR_LOGIN} このPRはデプロイされました。\"}" \
             "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments"
         done
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
