--- a/.github/workflows/release_notify.yml
+++ b/.github/workflows/release_notify.yml
@@ -11,13 +11,12 @@ permissions:
 jobs:
   pre-deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     # NOTE: 本番デプロイは基本的に master ブランチからのデプロイのみを許容する
     timeout-minutes: 1
     outputs:
       deploy-sha: ${{ steps.get-sha.outputs.result }}
     steps:
-      - name: 確認
-        run: echo ${{ github.ref }}
       - uses: actions/checkout@v4
         with:
           fetch-depth: 10 # 次のステップで parent commit を取得するために多めに取得している
