--- a/.github/workflows/release_notify.yml
+++ b/.github/workflows/release_notify.yml
@@ -26,6 +26,15 @@ jobs:
         run: |
           parent_commit=$(git rev-list --parents -n 1 HEAD | awk '{print $3}')
           echo "result=$parent_commit" >> $GITHUB_OUTPUT
+
+  test:
+    runs-on: ubuntu-latest
+    needs: [pre-deploy]
+    if: needs.pre-deploy.outputs.deploy-sha
+    steps:
+      - name: Test
+        run: |
+          echo ${{ needs.pre-deploy.outputs.deploy-sha }}
   base:
     uses: ./.github/workflows/release_notify_base.yml
   notify-authors:
