--- a/.github/workflows/release_notify.yml
+++ b/.github/workflows/release_notify.yml
@@ -36,9 +36,10 @@ jobs:
         run: |
           echo ${{ needs.pre-deploy.outputs.deploy-sha }}
   base:
+    needs: [test]
     uses: ./.github/workflows/release_notify_base.yml
   notify-authors:
-    needs: [base]
+    needs: [test]
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     timeout-minutes: 1
