--- a/.github/workflows/release_notify.yml
+++ b/.github/workflows/release_notify.yml
@@ -27,26 +27,19 @@ jobs:
         run: |
           parent_commit=$(git rev-list --parents -n 1 HEAD | awk '{print $3}')
           echo "result=$parent_commit" >> $GITHUB_OUTPUT
-
-  test:
+  test-pre-deploy:
     runs-on: ubuntu-latest
     needs: [pre-deploy]
     if: needs.pre-deploy.outputs.deploy-sha
     steps:
-      - name: Test
+      - name: pre-deployの結果を表示
         run: |
           echo ${{ needs.pre-deploy.outputs.deploy-sha }}
   base:
-    needs: [test]
+    needs: [test-pre-deploy]
     uses: ./.github/workflows/release_notify_base.yml
-  test2:
-    needs: [base]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Test2
-        run: echo ${{ github.event.pull_request.merged }}
   notify-authors:
-    needs: [test]
+    needs: [base]
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     timeout-minutes: 1
