--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -19,7 +19,7 @@ jobs:
         uses: ruby/setup-ruby@v1
       # NOTE: 10秒程度でインストールは完了するので ruby/setup-ruby の bundle cache は使わず
       # 毎回 bundle install している
-      - run: bundle install --jobs 2 --retry 3
+      - run: bundle install Danger
       - name: Danger
         run: bundle exec danger --verbose
         env:
