--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ commands:
     steps:
       - ruby/install-deps:
           key: gems-v1
-          with-cache: true
+          with-cache: false
           clean-bundle: true
           include-branch-in-cache-key: false
 
