--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,11 @@ commands:
 
   bundle-install:
     steps:
-      - ruby/install-deps
+      - ruby/install-deps:
+          key: gems-v1
+          with-cache: false
+          clean-bundle: false
+          include-branch-in-cache-key: false
 
   yarn-install:
     steps:
