--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,11 +76,11 @@ commands:
 
   bundle-install:
     steps:
-      - ruby/install-deps:
-          key: gems-v1
-          with-cache: false
-          clean-bundle: false
-          include-branch-in-cache-key: false
+      - run:
+          name: install dependencies
+          command: |
+            gem install bundler -v 2.0.2
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
 
   yarn-install:
     steps:
