--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ commands:
           name: install dependencies
           command: |
             gem install bundler -v 2.0.2
-            bundle install --jobs=4 --retry=3 --path vendor/bundle
+            bundle install --jobs=4 --retry=3
 
   yarn-install:
     steps:
