--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,9 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: <%= ENV.fetch("DB_USER") { root } %>
+  username: <%= ENV['DB_USER'] %>
   password: <%= ENV['MYSQL_ROOT_PASSWORD'] %>
-  host: <%= ENV.fetch("DB_HOST") { db } %>
+  host: <%= ENV['DB_HOST'] %>
 
 development:
   <<: *default
