--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,7 +207,7 @@ commands:
       - run:
           name: DB setup
           command: |
-            bin/rails db:create db:test:prepare
+            bin/rails db:create db:migrate
 
 jobs:
   rb-deps:
@@ -224,7 +224,6 @@ jobs:
 
   assets:
     executor: default
-    resource_class: large
     parameters:
       bundle_gemfile:
         type: string
@@ -236,14 +235,6 @@ jobs:
       - bundle-install
       - yarn-install
       - assets-precompile
-      - persist_to_workspace:
-          root: .
-          paths:
-            - "./public/assets"
-            - "./public/packs-test"
-            - "./tmp/cache/bootsnap"
-            # NOTE: CKEditor関連はnode_modules配下のファイルを利用するため引き継ぐ
-            - "./node_modules/ckeditor"
 
   rspec:
     executor: rspec
