--- a/config/database.yml
+++ b/config/database.yml
@@ -27,6 +27,7 @@ development:
 test:
   <<: *default
   database: rails_app_test
+  adapter: sqlite3
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
