--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,8 @@ commands:
   yarn-install:
     steps:
       - node/install:
-          install-yarn: true node-version: 20.11.1
+          node-version: 20.11.1
+          install-yarn: true 
           yarn-version: 1.22.15
       - node/install-packages:
           pkg-manager: yarn
