--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,6 +147,7 @@ commands:
             yarn install
             yarn run playwright install-deps chrome
             yarn run playwright install ffmpeg
+            npx playwright install
       - run:
           name: run RSpec
           environment:
