--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -12,5 +12,6 @@ jobs:
   rspec:
     runs-on: ubuntu-latest
     steps:
+      - run: echo ${{ github.ref }}
       - name: Sleep for test
         run: sleep 20
