--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -16,4 +16,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Echo complete
-        run: echo "complete"
+        run: echo ${{ github.sha }}
+      - name: Checkout
+        uses: actions/checkout@v2
+  
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: ${{ env.AWS_REGION }}
+
+      - name: Login to ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          file: ecs/Dockerfile
+          push: false
+          tags: |
+            ${{ steps.login-ecr.outputs.registry }}/rails :${{ github.sha }}
