--- a/config/database.yml
+++ b/config/database.yml
@@ -27,6 +27,9 @@ development:
 test:
   <<: *default
   database: rails_app_test
+  username: <%= ENV['MYSQL_USERNAME'] %>
+  password: <%= ENV['MYSQL_PASSWORD'] %>
+  host: <%= ENV['MYSQL_HOST'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -51,5 +54,6 @@ test:
 production:
   <<: *default
   database: rails_app_production
-  username: rails_app
-  password: <%= ENV["RAILS_APP_DATABASE_PASSWORD"] %>
+  username: <%= ENV['MYSQL_USERNAME'] %>
+  password: <%= ENV['MYSQL_PASSWORD'] %>
+  host: <%= ENV['MYSQL_HOST'] %>
